--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>First Commit</h1>
     <h1>second commit</h1>
     <h1>changes made by branch 1</h1>
+    <h1>another change</h1>
     
 </body>
 </html>
